--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 main {
     padding: 3.313rem 3.5rem 3.25rem 3.5rem;
     gap: 7.875rem;
-    max-width: 49.625rem;
+    width: 49.625rem;
     /* border: 2px solid; */
 }
 
