--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 main {
-    padding: 3.313rem 3.5rem 3.25rem 3.5rem;
+    padding: .5rem;
     gap: 7.875rem;
     max-width: 49.625rem;
     width: 100%;
